# crowd_based_signals_for_crypto_trading

./: .gitignore  README.md  app.py  get_eth_prices.py  pyproject.toml  reddit_api.py  reddit_posts_collection_script.py  requirements.txt  setup_google_oauth.py  yfinance_price_extraction.py
.github/workflows/: daily-reddit-collection.yml
ci/: smoke_imports.py
experiments/Model Training/: CNN_ETH vs LSTM.ipynb  eth_prices.csv  eth_reddit_sentiments_FINAL.csv  experiment_with_sentiments.ipynb
experiments/Sentiment Labelling/: eth-hourly-sentiments.ipynb  signal_evaluation.ipynb  topic_modelling_oneshot.ipynb
models/: eth_cnn_gru_saved.keras  minmax_scaler.joblib  original_labels.joblib
topic-modelling/: actual_topic_modelling.ipynb  readme.txt
topic-modelling/BTC/: BTC_prices.csv  reddit_data_btc_2025-08-19.csv  reddit_data_btc_2025-08-20.csv  reddit_data_btc_2025-08-21.csv  reddit_data_btc_2025-08-22.csv  reddit_data_btc_2025-08-23.csv  reddit_data_btc_2025-08-24.csv  reddit_data_btc_2025-08-25.csv  reddit_data_btc_2025-08-26.csv  reddit_data_btc_2025-08-27.csv  reddit_data_btc_2025-08-28.csv  reddit_data_btc_2025-08-29.csv  reddit_data_btc_2025-08-30.csv  reddit_data_btc_2025-08-31.csv  reddit_data_btc_2025-09-01.csv  reddit_data_btc_2025-09-02.csv  reddit_data_btc_2025-09-03.csv  reddit_data_btc_2025-09-04.csv  reddit_data_btc_2025-09-05.csv  reddit_data_btc_2025-09-06.csv  reddit_data_btc_2025-09-07.csv  reddit_data_btc_2025-09-08.csv  reddit_data_btc_2025-09-09.csv  reddit_data_btc_2025-09-10.csv  reddit_data_btc_2025-09-11.csv  (+1 more)
(+65 files in other folders)
